# currency_exchange_rate_request

./: .gitignore  Dockerfile  README.md  currency_api.py  data_base.py  database.db  main.py  pyproject.toml  server.py
.github/workflows/: python-app.yml
src/: __main__.py  calendar_.py  currency_api.py  curse_with_chatGPT.py  data_base.py  database.db  server.py
tests/: test_calendar.py  test_main.py  test_server.py
