[project]
name = "currency_exchange_rate_request"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FenZlo", email = "daniel.uporov@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[pytest]
pythonpath = ["src"]

[tool.pdm]
distribution = true
